--- a/rhb.tex
+++ b/rhb.tex
@@ -294,7 +294,7 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	         144.1800 &  144.3600 &         2.7 kHz & CW, SSB, MGM    & MS SSB random 144.195--144.205          \\
 	                  &           &                 &                 & \textbf{SSB anrop 144.300}              \\ \hline
 	         144.3600 &  144.3990 &         2.7 kHz & CW, SSB, MGM    & MS MGM random anrop 144.370             \\ \hline
-	         144.4000 &  144.4900 &          500 Hz & Fyr             & Exklusivt segment fyrar, ej QSO         \\ \hline
+	         144.4000 &  144.4900 &          500 Hz & Fyrar             & Exklusivt segment fyrar, ej QSO         \\ \hline
 	         144.5000 &  144.7940 &          20 kHz & All mode        & SSTV, RTTY, FAX, ATV                    \\
 	                  &           &                 &                 & Linjära transpondrar                    \\ \hline
 	         144.7940 &  144.9625 &          12 kHz & MGM             & APRS 144.800                            \\ \hline
@@ -321,7 +321,7 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	                  &               &                 &                 & PSK31 432.088                                 \\ \hline
 	         432.1000 &      432.3990 &         2.7 kHz & CW, SSB, MGM    & \textbf{SSB anrop 432.200}                    \\
 	                  &               &                 &                 & Mikrovåg talkback 432.350, FSK441 432.370     \\ \hline
-	         432.4000 &      432.4900 &          500 Hz & Fyr             & Exklusivt segment för fyrar                   \\ \hline
+	         432.4000 &      432.4900 &          500 Hz & Fyrar             & Exklusivt segment för fyrar                   \\ \hline
 	         432.5000 &      432.5940 &          12 kHz & All mode        & Linjära transpondrar IN 432.500--600          \\ \hline
 	         432.5000 &      432.5750 &          12 kHz & All mode        & NRAU Digital rep. in 432.500--575 2 MHz skift \\ \hline
 	         432.5940 &      432.9940 &          12 kHz & All mode        & Linjära transpondrar ut 432.600--800          \\ \hline
